adding sass cache to gitignore

--- a/index.html
+++ b/index.html
@@ -107,19 +107,16 @@
     <section class="download">
         <h3>Download it</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <div class="download-buttons">
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-secondary">APPLE STORE</button>
-                <button type="button" class="btn btn-secondary"><i class="fa fa-apple"></i></button>
-            </div>
-
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button type="button" class="btn btn-secondary">PLAY STORE</button>
-                <button type="button" class="btn btn-secondary"><i class="fa fa-android"></i></button>
-            </div>
+        <br><br>
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-secondary btn-title">APPLE STORE</button>
+            <button type="button" class="btn btn-secondary btn-icon"><i class="fa fa-apple"></i></button>
         </div>
-            
 
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-secondary btn-title">PLAY STORE</button>
+            <button type="button" class="btn btn-secondary btn-icon"><i class="fa fa-android"></i></button>
+        </div>
     </section>
 
     
