--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Project 4 - Changing PSD to HTML</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://use.fontawesome.com/d3fe197efb.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -118,6 +118,19 @@
             <button type="button" class="btn btn-secondary btn-icon"><i class="fa fa-android"></i></button>
         </div>
     </section>
+    <footer>
+        <div class="footer-items">
+            <a href="" target="_blanc">credits </a><span>|</span>
+            <a href="" target="_blanc">Privacy</a><span>|</span>
+            <a href="" target="_blanc">Our team</a>
+        </div>
+        <p>Copyright by phototime - all right reserved</p>
+        <div class="footer-icon">
+            <img src="images/livello-4.png">
+        </div>
+        <p>Created by <a href="https://github.com/mkudlak"><strong>MK</strong></a></p>
+        
+    </footer>
 
     
 
